# video-playground

./: .gitignore  CMakeLists.txt  README.md
src/: load_frame.cpp  main.cpp
